feat(api): ✨ 重构Kubernetes仪表盘服务和数据结构
实现了Kubernetes仪表盘服务的架构重构，主要变更如下：

1. 新增DTO/VO分层结构，包括K8sResourceStatsDTO、K8sNamespaceDTO等数据传输对象和视图对象
2. 添加K8sResourceConverter组件处理DTO/VO转换逻辑
3. 重构KubernetesDashboardService服务接口，明确分层职责
4. 优化命名空间查询接口返回类型和错误处理

服务层现在仅负责业务逻辑和K8s客户端交互，不再处理结果包装和转换。新增的计算字段如Pod健康状态和命名空间显示属性通过转换器自动处理。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>